--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2",
     "webpack-cli": "^5.1.4"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
   }
 }
